Revert last 3 commits, checkout feature/cobol branch

--- a/middleware/binding/cobol/xatmi/Makefile
+++ b/middleware/binding/cobol/xatmi/Makefile
@@ -9,29 +9,26 @@ BUILDSRV=$(CASUAL_HOME)/bin/casual-build-server
 
 CC=gcc
 CPP=g++
-CFLAGS=-I$(CASUAL_HOME)/include
-CPPFLAGS=-Wall -Wextra -I$(CASUAL_HOME)/include
-LDFLAGS=-L$(CASUAL_HOME)/lib -lcasual-xatmi
-
-COB=cob
-COBFLAGS=-xg -std=cobol85
-#COBFLAGS=-x -Wall -std=cobol85 $(shell cob-config --cflags --libs) $(CFLAGS)
-COBCPY=.
+CFLAGS=-I/usr/local/casual/include
+CPPFLAGS=-Wall -Wextra -I/usr/local/casual/include
+LDFLAGS=-L/usr/local/casual/lib -lcasual-xatmi
+# COBFLAGS=`cob-config --cflags --libs`
+COBFLAGS=$(shell cob-config --cflags --libs)
 
 all:	simpserv simpcl CSIMPCL
 
 CSIMPCL:  CSIMPCL.cbl xatmi_cobol.o
-	$(COB) CSIMPCL.cbl xatmi_cobol.o $(COBFLAGS) $(LDFLAGS)
+	cobc -x -Wall -std=cobol85 CSIMPCL.cbl xatmi_cobol.o $(COBFLAGS) $(CFLAGS) $(LDFLAGS)
 
 xatmi_cobol.o:  xatmi_cobol.c xatmi_cobol.h
 	$(CPP) $(CPPFLAGS) -c xatmi_cobol.c
 
 simpcl:  simpcl.c
-	$(CPP) $(CPPFLAGS) -o simpcl simpcl.c $(LDFLAGS)
+	$(CPP) -I/usr/local/casual/include -o simpcl simpcl.c $(LDFLAGS)
 
 simpserv: simpserv.c
-	$(BUILDSRV) -v -c $(CPP) -f simpserv.c -o simpserv -s TOUPPER
+	$(BUILDSRV) -v -c g++ -f simpserv.c -o simpserv -s TOUPPER
 
 clean:
-	- rm *.o *.int *.idy simpserv simpcl CSIMPCL
+	- rm *.o simpserv simpcl CSIMPCL
 
