--- a/middleware/binding/cobol/example/tx/Makefile
+++ b/middleware/binding/cobol/example/tx/Makefile
@@ -11,17 +11,16 @@ CC=gcc
 CPP=g++
 CFLAGS=-I$(CASUAL_HOME)/include
 CPPFLAGS=-Wall -Wextra -I$(CASUAL_HOME)/include
-LDFLAGS=-L/usr/local/casual/lib -lcasual-xatmi
+LDFLAGS=-L$(CASUAL_HOME)/lib -lcasual-cobol-binding
 # COBFLAGS=`cob-config --cflags --libs`
 COBFLAGS=$(shell cob-config --cflags --libs)
 
 all:	EXAMPLE1
 
-EXAMPLE1:  EXAMPLE1.cbl tx_cobol.o
-	cobc -x -Wall -std=cobol85 EXAMPLE1.cbl tx_cobol.o $(COBFLAGS) $(CFLAGS) $(LDFLAGS)
 
-tx_cobol.o:  tx_cobol.c tx_cobol.h
-	$(CPP) $(CPPFLAGS) -c tx_cobol.c
+EXAMPLE1:  EXAMPLE1.cbl
+	cobc -x -Wall -std=cobol85 EXAMPLE1.cbl $(COBFLAGS) $(CFLAGS) $(LDFLAGS)
+
 
 clean:
 	- rm *.o EXAMPLE1
