documentation clean-up
objective was to clean-up, restructure and consolidate the documentation
in a way that makes it easier to navigate and reach information for new
comers.

hopefully everything should be at maximum 2-3 clicks away from the
"start page".

this commit also touches or fixes issue #1, issue #104, issue #32 and
issue #76.

--- a/middleware/example/domain/multiple/medium/domainA/domain.env
+++ b/middleware/example/domain/multiple/medium/domainA/domain.env
@@ -2,7 +2,7 @@
 # pre requirements:
 #
 # The following has to be set to match your installation of casual:
-# 
+#
 # CASUAL_HOME
 #
 #
@@ -14,11 +14,12 @@ export LD_LIBRARY_PATH=$CASUAL_HOME/lib:$LD_LIBRARY_PATH
 #
 # CASUAL_DOMAIN_HOME - this domain
 #
-export CASUAL_DOMAIN_HOME=$HOME/casual/example/domain/multiple/medium/domainA
+CASUAL_DOMAIN_HOME=$(realpath -f "$(pwd)")
+export CASUAL_DOMAIN_HOME
 
 #
 # Defines what will be logged.
-# 
+#
 # See: <repo>/middleware/common/log.md for more information about loggin
 #
 export CASUAL_LOG='(error|warning|information)'
