--- a/middleware/example/env/casual.env
+++ b/middleware/example/env/casual.env
@@ -1,28 +1,30 @@
 #
 # Starting point. The cloned repo
-# 
+#
 # This environment variable is the only specific casual environment variable
-# needed when building casual (it's used internal to know where to log and stuff 
+# needed when building casual (it's used internal to know where to log and stuff
 # like that)
 #
-export CASUAL_BUILD_HOME=$HOME/git/casual
+CASUAL_BUILD_HOME="$(realpath .)"
+export CASUAL_BUILD_HOME
 
 #
 # PYTHONPATH so casual-make and other python stuff works
 #
-export PYTHONPATH=$CASUAL_BUILD_HOME/..:$PYTHONPATH
+CASUAL_PYTHONPATH="$(realpath "$CASUAL_BUILD_HOME/..")"
+[[ "$PYTHONPATH" == *"$CASUAL_PYTHONPATH"* ]] || export PYTHONPATH="$CASUAL_PYTHONPATH:$PYTHONPATH"
 
 #
 # Third party dependencies.
-# 
+#
 # These are separated to make it clear what casual
 # needs.
 #
-# These are only used in this file to help set 
+# These are only used in this file to help set
 # CASUAL_OPTIONAL_INCLUDE_PATHS and
 # CASUAL_OPTIONAL_LIBRARY_PATHS.
 #
-# You can remove the ones you've got installed on 
+# You can remove the ones you've got installed on
 # a standard path
 #
 
@@ -43,12 +45,12 @@ GTEST_LIBRARY_PATH=$CASUAL_BUILD_HOME/thirdparty/unittest/gtest/bin
 
 #
 # Optional paths. space separated list of paths
-# 
-# These are used where casual has depdendencies to 
+#
+# These are used where casual has depdendencies to
 # third party libraries, in the build-chain.
-# 
+#
 # You could declare the paths directly here instead of
-# via the intermediate variables. 
+# via the intermediate variables.
 #
 export CASUAL_OPTIONAL_INCLUDE_PATHS="\
 $GTEST_INCLUDE_PATH \
@@ -77,8 +79,8 @@ export LD_LIBRARY_PATH=$CASUAL_BUILD_HOME/bin:$LD_LIBRARY_PATH
 
 
 #
-# CASUAL_HOME - used when "installing", that is, copy all files that make up 
-# the casual product to a specific "place" (this "place" is also used when package 
+# CASUAL_HOME - used when "installing", that is, copy all files that make up
+# the casual product to a specific "place" (this "place" is also used when package
 # casual to a proper installation)
 #
 export CASUAL_HOME=$HOME/usr/local/casual
@@ -86,8 +88,7 @@ export CASUAL_HOME=$HOME/usr/local/casual
 
 #
 # Defines what will be logged.
-# 
+#
 # See: $CASUAL_BUILD_HOME/middleware/common/log.md for more information about loggin
 #
 export CASUAL_LOG='(error|warning|information)'
-
