--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -25,7 +25,7 @@ http {
         server_name localhost;
 
         location / {
-            root /opt/casual/webapp/build/unbundled/;
+            root /opt/casual/webapp/;
             index index.html index.htm;
         }
 
