--- a/middleware/xatmi/makefile.cmk
+++ b/middleware/xatmi/makefile.cmk
@@ -33,9 +33,13 @@ install_lib.append( lib_xatmi)
 install_include.append( ( 'include/xatmi/server.h', 'xatmi'))
 install_include.append( ( 'include/xatmi/defines.h', 'xatmi'))
 install_include.append( ( 'include/xatmi/extended.h', 'xatmi'))
-install_include.append( 'include/xa.h')
-install_include.append( 'include/tx.h')
 install_include.append( 'include/xatmi.h')
+
+install_include.append( ( 'include/tx/code.h', 'tx'))
+install_include.append( 'include/tx.h')
+
+install_include.append( ( 'include/xa/code.h', 'xa'))
+install_include.append( 'include/xa.h')
 
 #
 # unittest
