resolves issue #46 - throws _help exception_ when invoking built in help

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -39,3 +39,6 @@ server:
 
     - name: casual/example/uppercase
       function: casual_example_uppercase
+
+    - name: casual/example/lowercase
+      function: casual_example_lowercase
