--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -99,13 +99,14 @@ casual_common_objectfiles = [
     Compile( 'source/log/category.cpp'),
     Compile( 'source/log.cpp'),
 
-    Compile( 'source/error/code/xatmi.cpp'),
-    Compile( 'source/error/code/tx.cpp'),
-    Compile( 'source/error/code/xa.cpp'),
-    Compile( 'source/error/code/system.cpp'),
-    Compile( 'source/error/code/signal.cpp'),
-    Compile( 'source/error/code/casual.cpp'),
-    Compile( 'source/error/code/convert.cpp'),
+    Compile( 'source/code/xatmi.cpp'),
+    Compile( 'source/code/tx.cpp'),
+    Compile( 'source/code/xa.cpp'),
+    Compile( 'source/code/system.cpp'),
+    Compile( 'source/code/signal.cpp'),
+    Compile( 'source/code/casual.cpp'),
+    Compile( 'source/code/convert.cpp'),
+    
     
     Compile( 'source/exception/system.cpp'),
     Compile( 'source/exception/handle.cpp'),
