--- a/middleware/gateway/makefile.cmk
+++ b/middleware/gateway/makefile.cmk
@@ -88,7 +88,8 @@ target = LinkExecutable( 'bin/casual-gateway-outbound-tcp',
      common_archive, 
      'casual-common',  
      ])
-
+     
+install_bin.append( target)
 
 #
 # The inbound tcp connector
