first try on outbound-http "service call"
We perhaps need a better name than http. But I think that we should
put the nginx-plugin in this module and call it 'inbound', since that's
exactly what it is.

--- a/middleware/makefile.cmk
+++ b/middleware/makefile.cmk
@@ -22,7 +22,7 @@ with Scope():
     Build( 'queue/makefile.cmk')  
 
     Build( 'binding/makefile.cmk')  
-    
+    Build( 'http/makefile.cmk')    
 
 
 
