--- a/middleware/example/makefile.cmk
+++ b/middleware/example/makefile.cmk
@@ -24,7 +24,8 @@ target = LinkServer( 'server/bin/casual-example-server',
     [ Compile( 'server/source/example.cpp')],
     [ 
         'casual-xatmi',
-        'casual-common' 
+        'casual-common',
+        'casual-buffer'
     ],
     'server/source/example.services.yaml')
 
