--- a/middleware/plugin/config
+++ b/middleware/plugin/config
@@ -1,6 +1,5 @@
-ngx_addon_name=ngx_http_casual_module
-CASUAL_XATMI_ROOT=$CASUAL_BUILD_HOME/middleware/xatmi
-HTTP_MODULES="$HTTP_MODULES ngx_http_casual_module"
-NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_casual_module.c $ngx_addon_dir/casual_handler.c"
-CORE_INCS="$CORE_INCS $CASUAL_XATMI_ROOT/include"
-CORE_LIBS="$CORE_LIBS -L$CASUAL_XATMI_ROOT/bin -lcasual-xatmi"
+ngx_addon_name=ngx_http_xatmi_module
+HTTP_MODULES="$HTTP_MODULES ngx_http_xatmi_module"
+NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_xatmi_module.c $ngx_addon_dir/xatmi_handler.c"
+CORE_INCS="$CORE_INCS $CASUAL_BUILD_HOME/middleware/xatmi/include $CASUAL_BUILD_HOME/middleware/http/include"
+CORE_LIBS="$CORE_LIBS -L$CASUAL_BUILD_HOME/middleware/xatmi/bin -lcasual-xatmi -L$CASUAL_BUILD_HOME/middleware/http/bin -lcasual-http-inbound-common"
