normalized strong-id-types for process::id, ipc::id, resource::id
generalized the id type to _value-optional_ that could be used as an
std::optional if one or more values represent "invalid/empty/absent"

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -43,6 +43,8 @@ install_headers = []
 
 casual_common_objectfiles = [
 
+    Compile( 'source/strong/id.cpp'),
+
     Compile( 'source/server/context.cpp'),
     Compile( 'source/server/lifetime.cpp'),
     Compile( 'source/server/service.cpp'),
@@ -266,6 +268,10 @@ unittest_objectfiles = [
     Compile( 'unittest/source/event/test_listen.cpp'),
     
     Compile( 'unittest/source/test_domain.cpp'),
+
+    Compile( 'unittest/source/test_optional.cpp'),
+
+    
 ]
 
 
