Fix an interdomain transactional glitch. also: a bug in buffer
Added some verbose loggin on a few error branches in buffer, to help
future troubleshooting.

--- a/middleware/buffer/makefile.cmk
+++ b/middleware/buffer/makefile.cmk
@@ -28,6 +28,8 @@ lib_buffer = LinkLibrary( 'bin/casual-buffer',
      Compile( 'source/octet.cpp'),
      Compile( 'source/order.cpp'),
      Compile( 'source/string.cpp'),
+     
+     Compile( 'source/common.cpp'),
     ],
     [
      'casual-common', 'casual-sf'
