service-manager sends service-error to caller if callee terminates/cores

--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -42,3 +42,6 @@ server:
 
     - name: casual/example/lowercase
       function: casual_example_lowercase
+
+    - name: casual/example/terminate
+      function: casual_example_terminate
