issue #127: casual-log* improvements
fixed color.py according to pep-8 guidelines.
also added the possibility to disable coloring.

changed from optparse to argparse in casual-log-format,
and added argument --no-color.

fixed casual-log so that pager/less will not be used if
-h/--h* is passed as an argument.

created bash completion for casual-log, and added it to
build scripts.

--- a/middleware/administration/makefile.cmk
+++ b/middleware/administration/makefile.cmk
@@ -24,6 +24,7 @@ casual = LinkExecutable( 'bin/casual',
 Install( casual, '$(CASUAL_HOME)/bin')
 
 Install( 'etc/bash_completion.d/casual', '$(CASUAL_HOME)/etc/bash_completion.d')
+Install( 'etc/bash_completion.d/casual-log', '$(CASUAL_HOME)/etc/bash_completion.d')
 
 
 
