resolves issue #128 blocking dequeue jams sometimes...
Some cleaning up also.

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -113,6 +113,7 @@ casual_common_objectfiles = [
     Compile( 'source/exception/system.cpp'),
     Compile( 'source/exception/handle.cpp'),
     Compile( 'source/exception/xa.cpp'),
+    Compile( 'source/exception/tx.cpp'),
     Compile( 'source/exception/xatmi.cpp'),
 
     Compile( 'source/uuid.cpp'),
