--- a/middleware/serviceframework/makefile.cmk
+++ b/middleware/serviceframework/makefile.cmk
@@ -31,8 +31,7 @@ lib_sf = LinkLibrary( 'bin/casual-sf',
         Compile( 'source/archive/log.cpp'),
         Compile( 'source/archive/binary.cpp'),
         Compile( 'source/archive/service.cpp'),
-        #Compile( 'source/proxy.cpp'),
-        #Compile( 'source/service/interface.cpp'),
+        Compile( 'source/archive/line.cpp'),
         Compile( 'source/service/protocol.cpp'),
         Compile( 'source/service/protocol/implementation.cpp'),
         Compile( 'source/service/call.cpp'),
@@ -61,7 +60,6 @@ LinkUnittest( 'bin/test-casual-sf',
         Compile( 'unittest/isolated/source/test_maker.cpp'),
         
         Compile( 'unittest/isolated/source/test_uuid.cpp'),
-        #Compile( 'unittest/isolated/source/test_xatmi_call.cpp'),
         Compile( 'unittest/isolated/source/test_vo.cpp'),
         
         Compile( 'unittest/isolated/source/service/test_protocol.cpp'),
@@ -75,7 +73,8 @@ LinkUnittest( 'bin/test-casual-sf',
         Compile( 'unittest/isolated/source/archive/test_xml.cpp'),
         Compile( 'unittest/isolated/source/archive/test_ini.cpp'),
         Compile( 'unittest/isolated/source/archive/test_service.cpp'),
-        Compile( 'unittest/isolated/source/archive/test_log.cpp')
+        Compile( 'unittest/isolated/source/archive/test_log.cpp'),
+        Compile( 'unittest/isolated/source/archive/test_line.cpp'),
     ],
 	[ lib_sf, 'casual-xatmi', 'casual-common', 'casual-mockup', 'casual-unittest', 'yaml-cpp', 'pugixml'])
 
