--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -77,6 +77,7 @@ casual_common_objectfiles = [
     Compile( 'source/communication/ipc.cpp'),
     Compile( 'source/communication/socket.cpp'),
     Compile( 'source/communication/tcp.cpp'),
+    Compile( 'source/communication/domain.cpp'),
     Compile( 'source/communication/message.cpp'),
     Compile( 'source/communication/log.cpp'),
     
