--- a/middleware/example/server/source/example.services.yaml
+++ b/middleware/example/server/source/example.services.yaml
@@ -43,5 +43,11 @@ server:
     - name: casual/example/lowercase
       function: casual_example_lowercase
 
+    - name: casual/example/sleep
+      function: casual_example_sleep
+
+    - name: casual/example/work
+      function: casual_example_work
+
     - name: casual/example/terminate
       function: casual_example_terminate
