--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -110,6 +110,7 @@ casual_common_objectfiles = [
     Compile( 'source/code/convert.cpp'),
     
     
+    Compile( 'source/exception/common.cpp'),
     Compile( 'source/exception/system.cpp'),
     Compile( 'source/exception/handle.cpp'),
     Compile( 'source/exception/xa.cpp'),
