--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -237,7 +237,6 @@ unittest_objectfiles = [
     Compile( 'unittest/source/test_marshal.cpp'),
  
     Compile( 'unittest/source/test_uuid.cpp'),
-    #Compile( 'unittest/source/test_arguments.cpp'),
     Compile( 'unittest/source/test_file.cpp'),
     Compile( 'unittest/source/test_process.cpp'),
     Compile( 'unittest/source/test_string.cpp'),
@@ -255,7 +254,6 @@ unittest_objectfiles = [
     Compile( 'unittest/source/communication/test_ipc.cpp'),
     
 
-    
     Compile( 'unittest/source/message/test_dispatch.cpp'),
     Compile( 'unittest/source/message/test_coordinate.cpp'),
     
@@ -285,6 +283,8 @@ unittest_objectfiles = [
     Compile( 'unittest/source/test_functional.cpp'),
 
     Compile( 'unittest/source/test_argument.cpp'),
+
+    Compile( 'unittest/source/communication/test_domain.cpp'),
 ]
 
 
