--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -77,7 +77,7 @@ casual_common_objectfiles = [
     Compile( 'source/communication/ipc.cpp'),
     Compile( 'source/communication/socket.cpp'),
     Compile( 'source/communication/tcp.cpp'),
-    Compile( 'source/communication/domain.cpp'),
+    Compile( 'source/communication/pipe.cpp'),
     Compile( 'source/communication/message.cpp'),
     Compile( 'source/communication/log.cpp'),
     
@@ -124,6 +124,7 @@ casual_common_objectfiles = [
     Compile( 'source/file.cpp'),
     Compile( 'source/string.cpp'),
     Compile( 'source/signal.cpp'),
+    Compile( 'source/result.cpp'),
     
     
     Compile( 'source/chronology.cpp'),
@@ -284,7 +285,7 @@ unittest_objectfiles = [
 
     Compile( 'unittest/source/test_argument.cpp'),
 
-    Compile( 'unittest/source/communication/test_domain.cpp'),
+    Compile( 'unittest/source/communication/test_pipe.cpp'),
 ]
 
 
