clean up raw-memory abstractions
Also, fixed a glitch in domain manager

Resolves issue #140

--- a/middleware/common/makefile.cmk
+++ b/middleware/common/makefile.cmk
@@ -229,6 +229,7 @@ unittest_objectfiles = [
     Compile( 'unittest/source/test_conformance.cpp'),  
     
     Compile( 'unittest/source/test_algorithm.cpp'),
+    Compile( 'unittest/source/test_range.cpp'),
     Compile( 'unittest/source/test_execute.cpp'),
     
     Compile( 'unittest/source/test_memory.cpp'),
