updated rapidjson to get rid of a lot of lint-errors
from clang-tidy

issue #142

--- a/middleware/serviceframework/makefile.cmk
+++ b/middleware/serviceframework/makefile.cmk
@@ -5,7 +5,7 @@ IncludePaths([
     'include',
     '../common/include',
     '../xatmi/include',
-    '../../thirdparty/rapidjson/include',
+    '$(CASUAL_REPOSITORY_ROOT)/thirdparty/rapidjson/include',
     '$(CASUAL_OPTIONAL_INCLUDE_PATHS)',
     ])
 	
