--- a/middleware/http/makefile.cmk
+++ b/middleware/http/makefile.cmk
@@ -75,6 +75,7 @@ install_bin.append( target)
 LinkUnittest( 'unittest/bin/test-http',
    [
     Compile( 'unittest/outbound/source/test_model.cpp'),
+    Compile( 'unittest/outbound/source/test_transcode.cpp'),
    ],
    [ 
       common_outbound_archive, 
@@ -82,7 +83,8 @@ LinkUnittest( 'unittest/bin/test-http',
       'casual-mockup',
       'casual-common', 
       'casual-serviceframework', 
-      'casual-unittest'
+      'casual-unittest',
+      'curl'
    ])  
    
 
